style: header menu layout add

--- a/src/style/common/global.scss
+++ b/src/style/common/global.scss
@@ -31,10 +31,10 @@ button {
 body {
   font-size: 1.4rem;
   min-width: 280px;
-  background: $color__bg;
+  background: $color__black;
   font-family: $font__grotesk;
   line-height: $size__p-line-height;
-  color: $color__text-02;
+  color: $color__white;
   letter-spacing: -0.02em;
   overflow-x: hidden;
   word-break: keep-all;
