--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -162,3 +162,32 @@
   @extend .button__link;
   padding: 0.2rem 1rem;
 }
+
+.icon {
+  &__link {
+    width: 1rem;
+    height: 1rem;
+    line-height: 1;
+    overflow: hidden;
+    &-inner {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transition: transform 0.3s;
+      transform: translateX(-100%) translateY(50%);
+    }
+    &-item {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      trans &:nth-child(1) {
+        top: 0;
+        left: 0;
+      }
+      &:nth-child(2) {
+        top: -100%;
+        left: 100%;
+      }
+    }
+  }
+}
