--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,6 +2,7 @@
 @import 'common/index';
 @import 'ui/header.scss';
 @import 'ui/footer.scss';
+@import 'section/video.scss';
 @import 'section/visual.scss';
 @import 'section/project.scss';
 @import 'section/contact.scss';
