--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -161,4 +161,28 @@
       }
     }
   }
+
+  &__down {
+    width: 0.6rem;
+    overflow: hidden;
+    position: relative;
+    @include tb-lg {
+      width: 0.8rem;
+    }
+
+    &-inner {
+      transition: transform 0.3s;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      transform: translateY(-100%);
+    }
+    &-item {
+      &:nth-child(2) {
+        width: 100%;
+        position: absolute;
+        top: 100%;
+      }
+    }
+  }
 }
