--- a/src/style/section/video.scss
+++ b/src/style/section/video.scss
@@ -13,12 +13,28 @@
   }
   &__title {
     font-size: max(3.2rem, 3.2vw);
-    font-weight: 600;
+    font-weight: 500;
     line-height: 1.2;
     &-container {
+      @include util__flex(space-between, center);
+      width: calc(100% - #{$size__page-padding} - #{$size__page-padding});
       mix-blend-mode: difference;
       position: absolute;
       transform: translateY(-50%);
+      top: 50%;
+    }
+  }
+  &__info {
+    @include util__flex(stretch, center, 2.8rem);
+    font-weight: 600;
+  }
+  &__timer {
+    font-weight: 600;
+    text-decoration: underline;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: none;
     }
   }
   &__container {
@@ -35,17 +51,29 @@
     }
   }
   &__more {
+    @include util__flex(stretch, center, 0.4rem);
     position: absolute;
     bottom: calc(#{fn__get-header-height()} / 2);
     left: 50%;
     transform: translateX(-50%) translateY(50%);
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 600;
     text-decoration: underline;
     cursor: pointer;
 
+    @include tb-lg {
+      font-size: 1.6rem;
+    }
+
+    .icon__down-inner {
+      margin-top: 0.4rem;
+    }
     &:hover {
       text-decoration: none;
+
+      .icon__down-inner {
+        transform: translateY(0);
+      }
     }
   }
 }
