--- a/src/style/section/video.scss
+++ b/src/style/section/video.scss
@@ -52,18 +52,19 @@
     }
   }
   &__more {
+    @include util__font-size;
     @include util__flex(stretch, center, 0.4rem);
     position: absolute;
     bottom: calc(#{fn__get-header-height()} / 2);
     left: 50%;
     transform: translateX(-50%) translateY(50%);
-    font-size: 1.4rem;
     font-weight: 600;
     text-decoration: underline;
     cursor: pointer;
 
     @include tb-lg {
       font-size: 1.6rem;
+      text-decoration: none;
     }
 
     .icon__down-inner {
