--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -12,12 +12,30 @@
     }
   }
   &__item {
-    &-inner {
-      @include util__flex(stretch, stretch, 1vw);
+    @include util__flex(stretch, stretch, 1vw);
 
-      @include tb-lg {
-        flex-direction: column;
-        gap: 1rem;
+    @include tb-lg {
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    &[data-hover='true'] {
+      #{$project}__tag-text {
+        transform: translateY(-170%) skew(0, 15deg);
+
+        &:nth-child(2) {
+          transform: translateY(-100%);
+        }
+      }
+      #{$project}__item-sub {
+        opacity: 0.2;
+        @include tb-lg {
+          opacity: 1;
+        }
+      }
+      #{$project}__item-img::before {
+        opacity: 1;
+        transform: translateY(-50%);
       }
     }
 
@@ -40,27 +58,85 @@
 
       @include tb-lg {
         font-size: 1.6rem;
+        &::after {
+          content: ', ';
+        }
       }
 
       &-container {
         line-height: 1;
+
+        a {
+          @include tb-lg {
+            @include util__flex(stretch, center, 0.4rem);
+          }
+        }
+      }
+    }
+
+    &-link {
+      font-size: 1.2vw;
+      font-weight: 600;
+      margin-top: 1.25vw;
+      @include tb-lg {
+        font-size: 1.6rem;
+        gap: 0.6rem;
+        display: flex;
+        flex-direction: column;
+        margin-top: 1rem;
+      }
+
+      &-info {
+        transition: opacity 0.3s;
+        &:hover {
+          opacity: 0.2;
+        }
       }
     }
 
     &-sub {
-      font-size: 1.5vw;
-      font-weight: 600;
+      font-size: 1vw;
+      font-weight: 500;
+      margin-top: 0.1em;
+      transition: opacity 0.3s;
+
+      @include tb-lg {
+        font-size: 1.4rem;
+        margin-top: 0;
+      }
     }
 
     &-img {
       width: 75%;
       position: relative;
-      border: 0.1rem solid #fff;
-
       @include tb-lg {
         width: 100%;
       }
+      &::before {
+        @include util__font-size;
+        padding-top: 0.25vw;
+        padding-bottom: 0.25vw;
+        content: 'View Project →';
+        line-height: 1;
+        z-index: 2;
+        display: block;
+        pointer-events: none;
+        width: 100%;
+        background: $color__black;
+        top: 50%;
+        left: 0%;
+        font-weight: 500;
+        transform: translateY(-50%) rotate3d(1, 0, 0, 90deg);
+        transform-origin: center;
+        position: absolute;
+        transition: opacity 0.3s, transform 0.3s;
+        opacity: 0;
+        pointer-events: none;
 
+        @include tb-lg {
+          display: none;
+        }
+      }
       &::after {
         content: '';
         display: block;
@@ -70,6 +146,14 @@
     }
 
     &:nth-child(2n) {
+      #{$project}__tag {
+        align-items: flex-start;
+      }
+
+      #{$project}__tag-item {
+        align-items: flex-start;
+      }
+
       #{$project}__item-text {
         order: 1;
         text-align: left;
@@ -80,5 +164,25 @@
     @include util__font-size;
     font-weight: 500;
     line-height: 1.25;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    &-item {
+      display: inline-flex;
+      position: relative;
+      overflow: hidden;
+    }
+    &-text {
+      transition: transform 0.7s;
+      transform: translateY(0);
+      &:nth-child(2) {
+        position: absolute;
+        left: 0;
+        top: 100%;
+        transform: translateY(70%) skew(0, 15deg);
+      }
+    }
   }
 }
