style: footer 추가

--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -109,6 +109,9 @@
     &-img {
       width: 75%;
       position: relative;
+      img {
+        object-fit: cover;
+      }
       @include tb-lg {
         width: 100%;
       }
