--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -189,3 +189,54 @@
     }
   }
 }
+
+// 서브 프로젝트
+.sub-project {
+  &__item {
+    a {
+      display: grid;
+      grid-template-columns: 10fr 33fr 40fr;
+      width: 100%;
+      padding-top: clamp(3.2rem, 2.5vw, 4.8rem);
+      padding-bottom: clamp(3.2rem, 2.5vw, 4.8rem);
+      border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
+      @include tb-lg {
+        display: block;
+      }
+    }
+
+    &:last-child {
+      a {
+        border-bottom: none;
+      }
+    }
+
+    &-num {
+      font-size: clamp(1.6rem, 1.2vw, 2.4rem);
+    }
+    &-title {
+      font-size: clamp(3.2rem, 3.2vw, 4rem);
+
+      @include tb-lg {
+        font-size: clamp(2rem, 6.4vw, 4rem);
+      }
+    }
+    &-text-container {
+      font-size: clamp(1.6rem, 1.2vw, 2.4rem);
+    }
+    &-desc {
+      @include tb-lg {
+        margin-top: 0.8rem;
+      }
+    }
+  }
+  &__tag {
+    @include util__flex(flex-start, center, 0.8em);
+    flex-wrap: wrap;
+    font-size: 0.8em;
+    opacity: 0.5;
+    @include tb-lg {
+      margin-top: 0.8rem;
+    }
+  }
+}
