--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -2,6 +2,11 @@
   $project: &;
   padding-top: 6rem;
   padding-bottom: 6rem;
+
+  @include tb-lg {
+    padding-bottom: 0;
+  }
+
   &__list {
     display: flex;
     flex-direction: column;
@@ -109,6 +114,11 @@
     &-img {
       width: 75%;
       position: relative;
+      a {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
       img {
         object-fit: cover;
       }
@@ -192,30 +202,41 @@
 
 // 서브 프로젝트
 .sub-project {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+
+  @include tb-lg {
+    padding-top: 0;
+  }
+
   &__item {
+    border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
     a {
       display: grid;
-      grid-template-columns: 10fr 33fr 40fr;
+      grid-template-columns: 10fr 20fr 40fr;
       width: 100%;
-      padding-top: clamp(3.2rem, 2.5vw, 4.8rem);
-      padding-bottom: clamp(3.2rem, 2.5vw, 4.8rem);
-      border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
+      padding-top: clamp(3.2rem, 5vw, 6rem);
+      padding-bottom: clamp(3.2rem, 5vw, 6rem);
+      max-width: 1600px;
+      margin: 0 auto;
+
       @include tb-lg {
         display: block;
       }
     }
 
     &:last-child {
-      a {
-        border-bottom: none;
-      }
+      border-bottom: none;
     }
 
     &-num {
       font-size: clamp(1.6rem, 1.2vw, 2.4rem);
+      line-height: 2.4;
     }
     &-title {
       font-size: clamp(3.2rem, 3.2vw, 4rem);
+      font-weight: 500;
+      word-break: break-all;
 
       @include tb-lg {
         font-size: clamp(2rem, 6.4vw, 4rem);
@@ -223,6 +244,10 @@
     }
     &-text-container {
       font-size: clamp(1.6rem, 1.2vw, 2.4rem);
+
+      @include tb-lg {
+        font-size: clamp(1.4rem, 2vw, 2rem);
+      }
     }
     &-desc {
       @include tb-lg {
