style: post layout add

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,5 +5,4 @@
 @import 'section/video.scss';
 @import 'section/visual.scss';
 @import 'section/project.scss';
-@import 'section/contact.scss';
-@import 'section/skill.scss';
+@import 'section/posts.scss';
