--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -104,6 +104,7 @@
       font-weight: 500;
       margin-top: 0.1em;
       transition: opacity 0.3s;
+      padding-bottom: 0;
 
       @include tb-lg {
         font-size: 1.4rem;
@@ -115,9 +116,11 @@
       width: 75%;
       position: relative;
       a {
-        position: relative;
+        position: absolute;
         width: 100%;
         height: 100%;
+        top: 0;
+        left: 0;
       }
       img {
         object-fit: cover;
