style: ticker add

--- a/src/style/common/_index.scss
+++ b/src/style/common/_index.scss
@@ -2,5 +2,6 @@
 @import 'variable.scss';
 @import 'font.scss';
 @import 'util.scss';
+@import 'animation.scss';
 @import 'global.scss';
 @import 'module.scss';
