--- a/src/style/ui/footer.scss
+++ b/src/style/ui/footer.scss
@@ -1,6 +1,7 @@
 .footer {
   &__inner {
     @include util__inner;
+    position: relative;
     padding-top: 11.458vw;
     padding-bottom: 0.2vw;
     border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
@@ -9,6 +10,16 @@
       padding-top: 31.3vw;
       padding-bottom: 20vw;
     }
+  }
+  &__symbol {
+    width: 3.75vw;
+    min-width: 4.8rem;
+    position: fixed;
+    z-index: 50;
+    left: 1.6rem;
+    bottom: 1.6rem;
+    mix-blend-mode: difference;
+    pointer-events: none;
   }
   &__copy {
     font-size: min(6.25vw, 12rem);
