--- a/src/style/section/visual.scss
+++ b/src/style/section/visual.scss
@@ -1,4 +1,5 @@
 .visual {
+  $visual: &;
   padding-top: 6rem;
   padding-bottom: 6rem;
   &__inner {
@@ -162,6 +163,38 @@
         width: 32vw;
       }
     }
+
+    &[data-video='6'] {
+      width: 30.67vw;
+      @include tb-lg {
+        width: 39vw;
+      }
+    }
+    &[data-video='7'] {
+      width: 14.44vw;
+      @include tb-lg {
+        width: 33.2vw;
+      }
+    }
+    &[data-video='8'] {
+      width: 19.85vw;
+      @include tb-lg {
+        width: 31vw;
+      }
+    }
+    &[data-video='9'] {
+      width: 25.275vw;
+      @include tb-lg {
+        width: 30vw;
+      }
+    }
+    &[data-video='10'] {
+      // width: 28.884vw;
+      width: 27vw;
+      @include tb-lg {
+        width: 100%;
+      }
+    }
   }
 
   &__line {
@@ -186,6 +219,24 @@
       width: 25.93vw;
       @include tb-lg {
         width: 26vw;
+      }
+    }
+  }
+
+  &--outro {
+    #{$visual} {
+      &__text-row {
+        gap: 0 0.97vw;
+        @include tb-lg {
+          gap: 0 2.875vw;
+        }
+      }
+      &__text-container {
+        @include tb-lg {
+          font-size: 12.65vw;
+          // line-height: 1.05;
+          // letter-spacing: -0.025em;
+        }
       }
     }
   }
