feat: add video motion

--- a/src/style/common/global.scss
+++ b/src/style/common/global.scss
@@ -6,6 +6,9 @@ html {
 html,
 body {
   scroll-behavior: smooth !important;
+  &::-webkit-scrollbar {
+    scrollbar-width: none !important;
+  }
 }
 * {
   margin: 0;
