--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -63,79 +63,12 @@
   }
 }
 
-.light {
-  font-weight: 300;
-}
-
-.bold {
-  font-weight: 600;
-}
-
-.button {
-  @include util__button;
-}
-
-.badge {
-  @include util__button;
-  display: inline-block;
-
-  &__link {
-    padding: 0.2rem 1.4rem;
-  }
-}
-
-.social {
-  @include util__flex(stretch, center, 1.6rem);
-  &__item {
-    @include util__flex(center, center);
-
-    .button__link {
-      padding: 1.2rem;
-
-      &:hover {
-        .social__icon::after {
-          opacity: 0.6;
-        }
-      }
-    }
-  }
-  &__icon {
-    display: inline-block;
-    width: 2rem;
-    height: 2rem;
+.contents {
+  &-wrap {
     position: relative;
-
-    &::after {
-      content: '';
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: $color__text-01;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      border-radius: 100%;
-      opacity: 0;
-      filter: blur(0.8rem);
-      will-change: opacity;
-      transition: opacity 0.3s;
-    }
-
-    @media (max-width: $size__mb-md) {
-      width: 1.8rem;
-      height: 1.8rem;
-    }
+    margin-top: 100vh;
+    background: $color__black;
   }
-}
-
-.glassbox {
-  @include util__get-box-glass();
-}
-
-.tag {
-  @extend .button__link;
-  padding: 0.2rem 1rem;
 }
 
 .icon {
@@ -188,12 +121,5 @@
         top: 100%;
       }
     }
-  }
-}
-
-.contents {
-  &-wrap {
-    position: relative;
-    margin-top: 100vh;
   }
 }
