--- a/src/style/section/video.scss
+++ b/src/style/section/video.scss
@@ -1,6 +1,6 @@
 .video {
   $video: &;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
   top: 0;
@@ -23,6 +23,7 @@
       position: absolute;
       transform: translateY(-50%);
       top: 50%;
+      z-index: 5;
     }
   }
   &__info {
@@ -43,6 +44,7 @@
     height: 100%;
     position: relative;
     flex-grow: 1;
+    z-index: 1;
 
     video {
       position: absolute;
@@ -70,6 +72,7 @@
     .icon__down-inner {
       margin-top: 0.4rem;
     }
+
     &:hover {
       text-decoration: none;
 
