--- a/src/style/ui/footer.scss
+++ b/src/style/ui/footer.scss
@@ -1,4 +1,7 @@
 .footer {
+  position: relative;
+  background: $color__black;
+  z-index: 5;
   &__inner {
     @include util__inner;
     position: relative;
@@ -19,6 +22,7 @@
     left: 1.6rem;
     bottom: 1.6rem;
     mix-blend-mode: difference;
+    z-index: 50;
     pointer-events: none;
   }
   &__copy {
@@ -78,6 +82,7 @@
     margin-top: 1vw;
     &__item {
       font-size: max(1.5625vw, 2.4rem);
+      cursor: default;
       white-space: nowrap;
       font-weight: 600;
       opacity: 0.2;
