--- a/src/style/section/visual.scss
+++ b/src/style/section/visual.scss
@@ -6,6 +6,7 @@
     @include util__flex(stretch, center);
   }
   &__text {
+    overflow: hidden;
     &-container {
       width: 100%;
       font-size: 9.72vw;
@@ -22,6 +23,8 @@
     }
     &-inner {
       display: inline-block;
+      transform: translateY(100%);
+      opacity: 0;
     }
     &-row {
       @include util__flex(stretch, center);
@@ -35,10 +38,17 @@
     }
   }
   &__icon {
-    display: inline-flex !important;
+    display: inline-flex;
+    overflow: hidden;
+
+    svg {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
     &[data-icon='1'] {
       svg {
         transform: none !important;
+        opacity: 1;
       }
     }
     &[data-icon='1'],
@@ -68,8 +78,10 @@
     }
     &[data-icon='5'] {
       width: 6.45vw;
+
       svg {
         transform: none !important;
+        opacity: 1;
       }
       @include tb-lg {
         width: 9vw;
@@ -107,24 +119,16 @@
     }
   }
   &__video {
+    overflow: hidden;
+    transform-origin: left;
     flex-shrink: 0;
-    position: relative;
     margin-top: 1.4vw;
     margin-bottom: 1.4vw;
+    position: relative;
 
     @include tb-lg {
       margin-top: 2vw;
       margin-bottom: 1vw;
-    }
-
-    video {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translateX(-50%) translateY(-50%);
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
     }
     &::after {
       content: '';
@@ -137,74 +141,94 @@
       }
     }
 
-    &[data-video='1'] {
-      width: 36.04vw;
-      @include tb-lg {
-        width: 100%;
-      }
-    }
-    &[data-video='2'] {
-      width: 25.26vw;
-      @include tb-lg {
-        width: 50%;
-      }
-    }
-    &[data-video='3'] {
-      width: 39.84vw;
-
-      @include tb-lg {
-        width: 100%;
-      }
-    }
-    &[data-video='4'] {
-      width: 21.614vw;
-
-      @include tb-lg {
-        width: 46.4vw;
-      }
-    }
-    &[data-video='5'] {
-      width: 41.77vw;
-      @include tb-lg {
-        width: 32vw;
-      }
+    &-inner {
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0%;
+      height: 100%;
     }
 
-    &[data-video='6'] {
-      width: 30.67vw;
-      @include tb-lg {
-        width: 39vw;
-      }
+    video {
+      position: absolute;
+      top: 50%;
+      left: 0%;
+      transform: translateY(-50%);
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
-    &[data-video='7'] {
-      width: 14.44vw;
-      @include tb-lg {
-        width: 33.2vw;
-      }
+  }
+  [data-video='1'] {
+    width: 36.04vw;
+    @include tb-lg {
+      width: 100%;
     }
-    &[data-video='8'] {
-      width: 19.85vw;
-      @include tb-lg {
-        width: 31vw;
-      }
+  }
+  [data-video='2'] {
+    width: 25.26vw;
+    @include tb-lg {
+      width: 44.9vw;
     }
-    &[data-video='9'] {
-      width: 25.275vw;
-      @include tb-lg {
-        width: 30vw;
-      }
+  }
+  [data-video='3'] {
+    width: 39.84vw;
+
+    @include tb-lg {
+      width: 100%;
     }
-    &[data-video='10'] {
-      // width: 28.884vw;
-      width: 27vw;
-      @include tb-lg {
-        width: 100%;
-      }
+  }
+  [data-video='4'] {
+    width: 21.614vw;
+
+    @include tb-lg {
+      width: 46.4vw;
+    }
+  }
+  [data-video='5'] {
+    width: 41.77vw;
+    @include tb-lg {
+      width: 32vw;
+    }
+  }
+
+  [data-video='6'] {
+    width: 30.67vw;
+    @include tb-lg {
+      width: 39vw;
+    }
+  }
+  [data-video='7'] {
+    width: 14.44vw;
+    @include tb-lg {
+      width: 33.2vw;
+    }
+  }
+  [data-video='8'] {
+    width: 19.85vw;
+    @include tb-lg {
+      width: 31vw;
+    }
+  }
+  [data-video='9'] {
+    width: 25.275vw;
+    @include tb-lg {
+      width: 30vw;
+    }
+  }
+  [data-video='10'] {
+    // width: 28.884vw;
+    width: 27vw;
+    @include tb-lg {
+      width: 100%;
     }
   }
 
   &__line {
     width: 100%;
+    transform: scaleX(0);
+    transform-origin: left;
     flex-shrink: 2;
     display: inline-block;
     height: 0.41vw;
