--- a/src/style/section/visual.scss
+++ b/src/style/section/visual.scss
@@ -23,7 +23,6 @@
     }
     &-inner {
       display: inline-block;
-      transform: translateY(100%);
       opacity: 0;
     }
     &-row {
@@ -42,7 +41,6 @@
     overflow: hidden;
 
     svg {
-      transform: translateX(-100%);
       opacity: 0;
     }
     &[data-icon='1'] {
@@ -153,7 +151,6 @@
     video {
       position: absolute;
       top: 50%;
-      left: 0%;
       transform: translateY(-50%);
       width: 100%;
       height: 100%;
@@ -164,6 +161,9 @@
     width: 36.04vw;
     @include tb-lg {
       width: 100%;
+      video {
+        width: 100vw;
+      }
     }
   }
   [data-video='2'] {
@@ -177,6 +177,9 @@
 
     @include tb-lg {
       width: 100%;
+      video {
+        width: 100vw;
+      }
     }
   }
   [data-video='4'] {
