--- a/src/style/ui/header.scss
+++ b/src/style/ui/header.scss
@@ -129,8 +129,20 @@
   background: $color__black;
   top: 0;
   left: 0;
+  z-index: 5;
   overflow: hidden;
   transform-origin: top;
+
+  &__fixer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    max-height: 100vh;
+    max-height: 100lvh;
+  }
 
   &__inner {
     width: 100%;
