--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -115,12 +115,14 @@
     &-img {
       width: 75%;
       position: relative;
+      overflow: hidden;
       a {
         position: absolute;
         width: 100%;
         height: 100%;
         top: 0;
         left: 0;
+        overflow: hidden;
       }
       img {
         object-fit: cover;
