--- a/src/style/ui/footer.scss
+++ b/src/style/ui/footer.scss
@@ -1,10 +1,11 @@
 .footer {
-  position: relative;
+  // position: relative;
   background: $color__black;
   z-index: 5;
+  margin-top: 6rem;
   &__inner {
     @include util__inner;
-    position: relative;
+    // position: relative;
     padding-top: 11.458vw;
     padding-bottom: 0.2vw;
     border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
@@ -17,7 +18,8 @@
   &__symbol {
     width: 3.75vw;
     min-width: 4.8rem;
-    position: fixed;
+    // position: fixed;
+    position: sticky;
     z-index: 50;
     left: 1.6rem;
     bottom: 1.6rem;
