--- a/src/style/common/animation.scss
+++ b/src/style/common/animation.scss
@@ -6,3 +6,18 @@
     transform: translateX(-24.9%);
   }
 }
+
+@keyframes animation__color-spliter {
+  0% {
+    opacity: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  51% {
+    opacity: 0;
+  }
+}
