--- a/src/style/ui/header.scss
+++ b/src/style/ui/header.scss
@@ -116,7 +116,7 @@
     @include util__flex(stretch, center);
     padding: 0 1rem;
     &-spliter {
-      animation: animation__color-spliter 2s infinite both;
+      animation: animation__blink 1s step-end infinite;
     }
   }
 }
