--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -132,11 +132,17 @@ main {
   width: 3.75vw;
   min-width: 4.8rem;
   position: fixed;
-  // position: sticky;
   z-index: 50;
   left: 1.6rem;
   bottom: 1.6rem;
   mix-blend-mode: difference;
   z-index: 50;
   pointer-events: none;
+
+  svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(-50%);
+  }
 }
