--- a/src/style/section/introduce.scss
+++ b/src/style/section/introduce.scss
@@ -20,10 +20,13 @@
     }
   }
   &__title {
-    // @include util__flex(stretch, center);
     line-height: 1;
     font-size: clamp(4rem, 4.16vw, 8rem);
     font-weight: 400;
+
+    @include mb-md {
+      font-size: clamp(4rem, 11.2vw, 8rem);
+    }
   }
   &__contents {
     @include util__flex(stretch, stretch, 0, column);
