--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -207,6 +207,7 @@
 
 // 서브 프로젝트
 .sub-project {
+  $sub-project: &;
   padding-top: 6rem;
   padding-bottom: 6rem;
 
@@ -216,6 +217,8 @@
 
   &__item {
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
+    position: relative;
+
     a {
       display: grid;
       grid-template-columns: 10fr 20fr 40fr;
@@ -224,6 +227,20 @@
       padding-bottom: clamp(3.2rem, 5vw, 6rem);
       max-width: 1600px;
       margin: 0 auto;
+
+      &::after {
+        @include util__pseudo;
+        background: rgba(255, 255, 255, 0.1);
+        transition: background 0.3s;
+      }
+
+      &:hover {
+        #{$sub-project}::after {
+        }
+
+        // padding-left: 2.4vw;
+        // padding-right: 2.4vw;
+      }
 
       @include tb-lg {
         display: block;
