--- a/src/style/common/global.scss
+++ b/src/style/common/global.scss
@@ -6,10 +6,27 @@ html {
 html,
 body {
   scroll-behavior: smooth !important;
-  &::-webkit-scrollbar {
-    scrollbar-width: none !important;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+}
+
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 1.6rem;
+
+  &:active {
+    background-color: rgba(255, 255, 255, 0.5);
   }
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -61,4 +78,3 @@ button {
   background: transparent;
   font-family: $font__grotesk;
 }
-
