--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -96,6 +96,10 @@
         &:hover {
           opacity: 0.2;
         }
+
+        @include tb-lg {
+          margin-top: 6rem;
+        }
       }
     }
 
@@ -244,9 +248,6 @@
         &::after {
           opacity: 1;
         }
-
-        // padding-left: 2.4vw;
-        // padding-right: 2.4vw;
       }
 
       @include tb-lg {
