fix: lenis-scroll fix

--- a/src/style/common/global.scss
+++ b/src/style/common/global.scss
@@ -5,7 +5,7 @@ html {
 }
 html,
 body {
-  scroll-behavior: smooth !important;
+  // scroll-behavior: smooth !important;
 }
 
 ::-webkit-scrollbar-track {
