--- a/src/style/common/global.scss
+++ b/src/style/common/global.scss
@@ -8,6 +8,11 @@ body {
   // scroll-behavior: smooth !important;
 }
 
+::selection {
+  background: rgba(255, 255, 255, 0.8);
+  color: $color__black;
+}
+
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: transparent;
