--- a/src/style/section/introduce.scss
+++ b/src/style/section/introduce.scss
@@ -7,7 +7,8 @@
   }
   &__inner {
     display: grid;
-    grid-template-columns: 2fr 3fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr;
     max-width: 83.33vw;
     margin: 0 auto;
     min-height: unset;
@@ -20,6 +21,8 @@
     }
   }
   &__title {
+    grid-column: 1 / 4;
+    grid-row: 1 /2;
     line-height: 1;
     font-size: clamp(4rem, 4.16vw, 8rem);
     font-weight: 400;
@@ -56,6 +59,11 @@
   &__contents {
     @include util__flex(stretch, stretch, 0, column);
   }
+
+  &__contents{
+     grid-column: 2 / 4;
+     grid-row: 1 / 2;
+     }
   &__desc {
     // font-size: clamp(2rem, 1.77vw, 3.4rem);
     font-size: clamp(1.4rem, 1.77vw, 2.4rem);
@@ -66,6 +74,50 @@
       margin-top: 2.4rem;
     }
   }
+
+
+
+
+ .ticker {
+       display: grid;
+         grid-column: 1 / 4;
+           grid-row: 2 / 2;
+     &__inner{
+
+       align-items: center;
+       gap: clamp(10rem, 0.625vw, 0.83vw);
+       line-height: 1;
+       margin-top: max(2.4rem, 3.2vw);
+
+     }
+     @media (max-width: 768px) {
+       .introduce__icon-list {
+         gap: 1.2rem;
+         margin-top: 3.2rem;
+       }
+     }
+
+     &__item {
+       font-size: max(1.5625vw, 2.4rem);
+       cursor: default;
+       white-space: nowrap;
+       font-weight: 600;
+       opacity: 0.5;
+       transition: opacity 0.3s;
+       height: 100%
+     }
+
+     &__item img {
+       height: 100%; /* 이미지를 부모 요소인 .ticker__item의 높이에 맞춥니다 */
+       width: 200px; /* 가로 너비는 자동으로 조정됩니다 */
+       object-fit: contain; /* 이미지가 부모 요소에 맞게 비율을 유지하면서 채워지도록 설정합니다 */
+     }
+
+     &__item:hover {
+       opacity: 1;
+     }
+   }
+/*
   &__icon {
     &-list {
       @include util__flex(stretch, center, clamp(0.4rem, 0.625vw, 0.83vw));
@@ -95,5 +147,5 @@
       //   width: 2.8rem;
       // }
     }
-  }
+  } */
 }
